<resources>
    <string name="app_name">Mutual Election</string>
    <string name="id">ID Number</string>
    <string name="pwd">Password</string>
    <string name="login">Login</string>
    <string name="forget">Forget</string>
    <string name="first_notice">Agree With The Privacy Policy</string>
    <string name="id_hint">Teacher or Student ID</string>
    <string name="pwd_hint">Your Password</string>
    <string name="type1">Teacher</string>
    <string name="type2">Student</string>
    <string name="second_notice">Copyright reserved by Chen</string>
    <string name="new_pwd_label">New Password</string>
    <string name="again_pwd_label">Password Again</string>
    <string name="submit_btn">Submit</string>
    <string name="cancel_btn">Cancel</string>
    <string name="no_data_notice">No Data Now</string>
    <string name="apply_label">My Applied Logs</string>
    <string name="detail">Detail  >>></string>
    <string name="show">Chose Student</string>
    <string name="choose_topic_label">Topic Id</string>
    <string name="extra_label">Extra Comment</string>
    <string name="extra_tooltip">Add some extra information to present yourself, so the selected possibility will increase.</string>
    <string name="topic_label">Topic Id</string>
    <string name="topic_name">Topic Name</string>
    <string name="teacher_label">Teacher</string>
    <string name="title_label">Level</string>
    <string name="left_label">Remain</string>
    <string name="tutor_label">Haven\'t Decide My Tutor</string>
    <string name="btn_logout">Log Out</string>
    <string name="request_extra">Request Extra Content</string>
    <string name="apply_notice">1 for Agreed, 0 for handling, and -1 for Rejected</string>
    <string name="response_extra">Response Comment</string>
    <string name="btn_students">My Students</string>
    <string name="btn_adjust">Adjust Recruitment</string>
    <string name="max">Max</string>
    <string name="now">Now</string>
    <string name="left">Left</string>
    <string name="student_label">Student</string>
    <string name="major_label">Major</string>
    <string name="student_topic">Apply Topic</string>
    <string name="status">Status</string>
    <string name="receive_label">My Received Logs</string>
    <string name="detail_label">Click For Details</string>
    <string name="apply_btn">Apply For</string>
    <string name="extra_notice">If possible, you can add some information here.</string>
    <string name="btn_agree">Agree</string>
    <string name="btn_reject">Reject</string>
</resources>