<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_gravity="center"
        tools:src="@mipmap/first_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="28dp"
            android:text="@string/id"
            android:textColor="#000000"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/id_input"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/id_hint"
            android:textColorHint="#696969"
            android:textSize="20dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pwd_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/pwd"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/pwd_input"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="@string/pwd_hint"
            android:textColorHint="#696969"
            android:inputType="textPassword"
            android:textSize="20dp"
            android:gravity="center"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/teacher_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="66dp"
            android:text="@string/type1"
            android:textSize="18dp"
            android:theme="@style/MyCheckBox" />

        <CheckBox
            android:id="@+id/student_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type2"
            android:textSize="18dp"
            android:theme="@style/MyCheckBox"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="22dp"
        android:text="@string/first_notice"
        android:textSize="12dp"
        android:checked="true"
        android:theme="@style/MyCheckBox"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="88dp"
            android:layout_marginTop="12dp"
            android:text="@string/login"
            android:textColor="#696969"
            android:background="#90EE90"/>

        <Button
            android:id="@+id/forget"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/forget"
            android:textColor="#696969"
            android:background="#FFA07A"/>
    </LinearLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/second_notice"
        android:textSize="12dp"
        android:gravity="center" />


</LinearLayout>