<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".student.StuApplyActivity">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/topic_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="333dp"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="128dp"
            android:layout_height="68dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/extra_label"
            android:textSize="16dp"
            android:textColor="#000000"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/extra"
            android:layout_width="188dp"
            android:layout_height="68dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:inputType="textMultiLine"
            android:textSize="16dp"
            android:hint="@string/extra_notice"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="88dp"
            android:layout_marginTop="12dp"
            android:text="@string/submit_btn"
            android:textColor="#000000"
            android:background="#98FB98"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/cancel_btn"
            android:textColor="#000000"
            android:background="#FFA07A"/>

    </LinearLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/second_notice"
        android:textSize="12dp"
        android:gravity="center" />

</LinearLayout>