<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".student.StuIndexFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp">

        <TextView
            android:layout_width="88dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/teacher_label"
            android:textSize="16dp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:background="#FFE4B5"/>
        <TextView
            android:layout_width="88dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:text="@string/title_label"
            android:textSize="16dp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:background="#FFE4B5"/>

        <TextView
            android:layout_width="68dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:text="@string/left_label"
            android:textSize="16dp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:background="#FFE4B5"/>

        <TextView
            android:layout_width="122dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:text="@string/detail_label"
            android:textSize="16dp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:background="#FFE4B5"/>
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_data_notice"
        android:textColor="#000000" />

</LinearLayout>