<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".student.StuIndexFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="88dp"
            android:layout_height="22dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:text="@string/student_label"
            android:textSize="16dp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:background="#FFE4B5"/>
        <TextView
            android:id="@+id/level"
            android:layout_width="48dp"
            android:layout_height="22dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:text="@string/major_label"
            android:textSize="16dp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:background="#FFE4B5"/>

        <TextView
            android:id="@+id/left"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/topic_name"
            android:textSize="16dp"
            android:textColor="#000000"
            android:background="#FFE4B5"/>
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/no_data_notice"
        android:textColor="#696969" />

</LinearLayout>