<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".teacher.AdjustMaxActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="28dp"
            android:text="@string/max"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/max_number"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="48dp"
            android:textSize="22dp"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="28dp"
            android:text="@string/now"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/now_number"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="48dp"
            android:textSize="22dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="28dp"
            android:text="@string/left"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/left_number"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="52dp"
            android:textSize="22dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="88dp"
            android:layout_marginTop="12dp"
            android:text="@string/submit_btn"
            android:textColor="#696969"
            android:background="#90EE90"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/cancel_btn"
            android:textColor="#696969"
            android:background="#FFA07A"/>
    </LinearLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/second_notice"
        android:textSize="12dp"
        android:gravity="center" />

</LinearLayout>