<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="88dp"
            android:layout_height="22dp"
            android:layout_margin="10dp"
            android:text="@string/student_label"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16dp"
            android:background="#FFFACD"/>

        <TextView
            android:layout_width="44dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/major_label"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16dp"
            android:background="#FFFACD"/>


        <TextView
            android:layout_width="154dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:text="@string/student_topic"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16dp"
            android:background="#FFFACD"/>

        <TextView
            android:layout_width="48dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:text="@string/status"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16dp"
            android:background="#F4A460"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="88dp"
            android:layout_height="22dp"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="#696969"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/major"
            android:layout_width="44dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="#696969"
            android:textSize="16dp" />


        <TextView
            android:id="@+id/topic"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:textAlignment="center"
            android:textColor="#696969"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="18dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="2dp"
            android:textAlignment="center"
            android:textColor="#696969"
            android:textSize="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="2dp"
            android:textColor="#000000"
            android:textSize="12dp"
            android:text="@string/request_extra"
            android:background="#FFFACD"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="2dp"
            android:textColor="#000000"
            android:textSize="12dp"
            android:text="@string/response_extra"
            android:background="#F4A460"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/request_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:gravity="center"
            android:singleLine="false"
            android:textColor="#696969"
            android:textSize="12dp"
            android:text="@string/no_data_notice"/>

        <TextView
            android:id="@+id/response_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="2dp"
            android:singleLine="false"
            android:textColor="#696969"
            android:textSize="12dp"
            android:text="@string/no_data_notice"/>
    </LinearLayout>


</LinearLayout>