<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="233dp"
            android:layout_height="122dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            tools:src="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teacher_name"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="#696969" />

            <TextView
                android:id="@+id/major"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="#696969" />
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/my_students"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:background="#F0FFF0"
        android:text="@string/btn_students" />
    <Button
        android:id="@+id/my_logs"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:background="#F0FFFF"
        android:text="@string/receive_label" />
    <Button
        android:id="@+id/my_max"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:background="#F0F8FF"
        android:text="@string/btn_adjust" />
    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:background="#FFA07A"
        android:text="@string/btn_logout" />
</LinearLayout>